Fix more CJK characters not to skip ink for text decorations

The CL[1] disabled skipping inks for characters of
IsCJKIdeographOrSymbol(). This does not cover all characters in CJK.

This patch adds other CJK characters from Unicode blocks, in the
same way as WebKit does.

[1] https://codereview.chromium.org/2598393002

Bug: 793762
Change-Id: I20e10588adc988399c900b336d0c22ad984bb011