third_party/WebKit/Source/platform/text/Character.cpp
@@ -211,6 +211,30 @@ unsigned Character::ExpansionOpportunityCount(const UChar* characters,
   return count;
 }
 
+bool Character::CanTextDecorationSkipInk(UChar32 codepoint) {
+  if (Character::IsCJKIdeographOrSymbol(codepoint))
+    return false;
+
+  UBlockCode block = ublock_getCode(codepoint);
+  switch (block) {
+    // These blocks contain CJK characters we don't want to skip ink, but are
+    // not ideograph that IsCJKIdeographOrSymbol() does not cover.
+    case UBLOCK_BOPOMOFO:
+    case UBLOCK_BOPOMOFO_EXTENDED:
+    case UBLOCK_HANGUL_JAMO:
+    case UBLOCK_HANGUL_COMPATIBILITY_JAMO:
+    case UBLOCK_HANGUL_SYLLABLES:
+    case UBLOCK_HANGUL_JAMO_EXTENDED_A:
+    case UBLOCK_HANGUL_JAMO_EXTENDED_B:
+    case UBLOCK_LINEAR_B_IDEOGRAMS:
+    case UBLOCK_TANGUT:
+    case UBLOCK_TANGUT_COMPONENTS:
+      return false;
+    default:
+      return true;
+  }
+}
+
 bool Character::CanReceiveTextEmphasis(UChar32 c) {
   WTF::Unicode::CharCategory category = WTF::Unicode::Category(c);
   if (category &
